# router/router.go
@@ -1,6 +1,7 @@
 package router
 
 import (
+	"fmt"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -26,7 +27,10 @@ func Cors() gin.HandlerFunc {
 }
 func Router() *gin.Engine {
 	r := gin.Default()
-
+	err := r.SetTrustedProxies([]string{"127.0.0.1"})
+	if err != nil {
+		fmt.Print("proxy error:" + err.Error())
+	}
 	r.Use(Cors())
 	//swagger
 	ginSwagger.WrapHandler(
@@ -45,15 +49,15 @@ func Router() *gin.Engine {
 	r.POST("/version", service.CreateVersion)
 	r.POST("/version-delete", service.DeleteVersion)
 	r.GET("/version-with-tag", service.GetVersionWithTag)
-	r.POST("/version-with-tag-delete", service.DeleteVersionWithTag)
 	r.POST("/version-with-tag", service.CreateVersionTag)
+	r.POST("/version-with-tag-delete", service.DeleteVersionWithTag)
 
 	//versionEvent 版本活动
 	r.GET("/version-event", service.GetVersionEvent)
-	r.GET("/version-event-with-tag", service.GetVersionEventWithTag)
 	r.POST("/version-event", service.CreateVersionEvent)
 	r.PUT("/version-event", service.UpdateVersionEvent)
 	r.POST("/version-event-delete", service.DeleteVersionEvent)
+	r.GET("/version-event-with-tag", service.GetVersionEventWithTag)
 	r.POST("/version-event-with-tag", service.CreateVersionEventTag)
 	r.POST("/version-event-with-tag-delete", service.DeleteVersionEventTag)
 
@@ -62,16 +66,17 @@ func Router() *gin.Engine {
 	r.PUT("/event", service.UpdateEvent)
 	r.POST("/event", service.CreateEvent)
 	r.POST("/event-delete", service.DeleteEvent)
-	r.GET("/event-with-tag", service.GetEventWithTag)
 	r.GET("/event-with-tag-detail", service.GetEventWithTagWithEventDetail)
+	r.GET("/event-with-tag", service.GetEventWithTag)
 	r.POST("/event-with-tag", service.CreateEventTag)
 	r.POST("/event-with-tag-delete", service.DeleteEventTag)
 
+	//目前用不上
 	//user
-	r.GET("/user", service.GetUser)
-	r.POST("/user", service.CreateUser)
-	r.PUT("/user", service.UpdateUser)
-	r.POST("/user-delete", service.DeleteUser)
+	//r.GET("/user", service.GetUser)
+	//r.POST("/user", service.CreateUser)
+	//r.PUT("/user", service.UpdateUser)
+	//r.POST("/user-delete", service.DeleteUser)
 
 	r.POST("/register", service.Register)
 	r.POST("/login", service.Login)
@@ -82,13 +87,13 @@ func Router() *gin.Engine {
 	r.PUT("/user-version-event", service.UpdateUserVersionEvent)
 	r.POST("/user-version-event-delete", service.DeleteUserVersionEvent)
 
-	//userEvent 用户活动
+	//userEvent 用户活动 userEvent
 	r.GET("/user-event", service.GetUserEvent)
 	r.POST("/user-event", service.CreateUserEvent)
 	r.PUT("/user-event", service.UpdateUserEvent)
 	r.POST("/user-event-delete", service.DeleteUserEvent)
 
-	//用户自定义
+	//用户自定义 userPrivate
 	r.GET("/user-private", service.GetUserPrivate)
 	r.POST("/user-private", service.CreateUserPrivate)
 	r.PUT("/user-private", service.UpdateUserPrivate)
@@ -98,16 +103,25 @@ func Router() *gin.Engine {
 	r.GET("/daily", service.GetUserDaily)
 	r.POST("/daily", service.FreshUserDaily)
 
-	//卡池
+	//卡池 Pool
 	r.GET("/pool", service.GetPool)
 	r.POST("/pool", service.UpdatePool)
 	r.PUT("/pool", service.UpdatePool)
 	r.POST("/pool-delete", service.DelPool)
+	r.GET("/pool-with-tag", service.GetPoolWithTag)
+	r.POST("/pool-with-tag", service.CreatePoolTag)
+	r.POST("/pool-with-tag-delete", service.DeletePoolTag)
 
-	//活动详情
+	//活动详情 eventDetail
 	r.GET("/eventDetail", service.GetEventDetail)
 	r.POST("/eventDetail", service.CreateEventDetail)
 	r.PUT("/eventDetail", service.UpdateEventDetail)
 	r.POST("/eventDetail-delete", service.DelEventDetail)
+
+	//标签 Tag
+	r.GET("/tag", service.GetTag)
+	r.POST("/tag", service.CreateTag)
+	r.PUT("/tag", service.UpdateTag)
+	r.POST("/tag-delete", service.DeleteTag)
 	return r
 }
